<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5044112c"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <!--<TextView-->
        <!--android:id="@+id/appwidget_text"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="8dp"-->
        <!--android:background="#09C"-->
        <!--android:contentDescription="@string/appwidget_text"-->
        <!--android:text="@string/appwidget_text"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textSize="24sp"-->
        <!--android:textStyle="bold|italic"-->
        <!--android:layout_gravity="center" />-->
    <ImageView
        android:id="@+id/appwidget_text"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text"
        android:src="@drawable/cc_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:orientation="horizontal"
        android:background="@android:color/holo_orange_light">


        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconA"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/appwidget_text3"
                    android:src="@drawable/india"
                    android:layout_gravity="left" />

                <ImageView
                    android:id="@+id/vs"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/appwidget_text3"
                    android:src="@drawable/vs" />

                <ImageView
                    android:id="@+id/iconB"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/appwidget_text3"
                    android:src="@drawable/pakistan"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|left|end"
                android:orientation="horizontal"
                android:weightSum="1"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/teamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:contentDescription="@string/teamA"
                    android:text="@string/teamA"
                    android:textColor="#ff000000"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center"
                    android:paddingRight="50dp"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/teamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:contentDescription="@string/teamB"
                    android:text="@string/teamB"
                    android:textColor="#ff000000"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:paddingLeft="30dp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/matchFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"

                    android:contentDescription="@string/matchFormat"
                    android:text="@string/matchFormat"
                    android:textColor="#ff000000"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <TextView
                android:id="@+id/scoreTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:contentDescription="@string/scoreTeams"
                android:text="@string/scoreTeams"
                android:textColor="#ff000000"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@android:color/holo_orange_dark"
        >


        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:contentDescription="@string/status"
            android:text="@string/status"
            android:textColor="#ff070606"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"        >

        <ImageView
            android:id="@+id/backC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:contentDescription="@string/appwidget_text3"
            android:src="@drawable/back"
            android:layout_gravity="start"
            android:paddingRight="50dp"
            android:clickable="true" />

        <ImageView
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/backC"

            android:contentDescription="@string/appwidget_text3"
            android:src="@drawable/dots"
             />

        <ImageView
            android:id="@+id/forwC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/dot"

            android:clickable="true"
            android:contentDescription="@string/appwidget_text3"
            android:src="@drawable/right"
            android:layout_gravity="end"
            android:paddingLeft="50dp" />
    </LinearLayout>
    <!--ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appwidget_text"
        android:layout_toRightOf="@id/appwidget_text"
        /-->

</LinearLayout>